Add more categories

--- a/pages/create.html
+++ b/pages/create.html
@@ -37,6 +37,7 @@
           <option>Art</option>
           <option>Biography/Autobiography</option>
           <option>Business</option>
+          <option>Computers</option>
           <option>Educational</option>
           <option>Fiction</option>
           <option>History</option>
@@ -45,6 +46,7 @@
           <option>Medical</option>
           <option>Music</option>
           <option>Philosophy</option>
+          <option>Science</option>
         </select>
       </div>
       <div class="form-group">
