--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,10 @@
     <script src="static/js/index.js"></script>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <div id="listings">
+
+      </div>
+    </div>
   </body>
 </html>
