--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,31 @@
     <script src="static/js/index.js"></script>
   </head>
   <body>
+    
     <div class="container">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">OnlineBooks</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Browse</a>
+            </li>
+          </ul>
+
+          <div class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" disabled>
+            <button class="btn btn-outline-success my-2 my-sm-0" disabled>Search</button>
+          </div>
+          
+        </div>
+      </nav>
+
+
+
       <div id="listings">
 
       </div>
