Update styles, navbar

--- a/pages/create.html
+++ b/pages/create.html
@@ -63,7 +63,7 @@
             <option>Art</option>
             <option>Biography/Autobiography</option>
             <option>Business</option>
-            <option>Computers</option>
+            <option>Computer Science</option>
             <option>Educational</option>
             <option>Fiction</option>
             <option>History</option>
@@ -79,7 +79,7 @@
           <label for="listing_password">Listing Password:</label>
           <input type="password" id="listing_password" name="listing_password" class="form-control">
         </div>
-        <button onclick="submit_form()">Submit</button>
+        <button onclick="submit_form()" class='btn btn-success'>Submit</button>
       </div>
     </div>
   </body>
