--- a/pages/index.html
+++ b/pages/index.html
@@ -27,8 +27,9 @@
           </ul>
 
           <div class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" disabled>
-            <button class="btn btn-outline-success my-2 my-sm-0" disabled>Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" >
+            <button class="btn btn-outline-success my-2 my-sm-0" >Search</button>
+             <a class="nav-link" href="/search">Searc</a>
           </div>
           
         </div>
