--- a/pages/create.html
+++ b/pages/create.html
@@ -79,6 +79,10 @@
           <label for="listing_password">Listing Password:</label>
           <input type="password" id="listing_password" name="listing_password" class="form-control">
         </div>
+        <div class="form-group">
+          <label for="confirm_listing_password">Confirm Listing Password:</label>
+          <input type="password" id="confirm_listing_password" name="confirm_listing_password" class="form-control">
+        </div>
         <button onclick="submit_form()" class='btn btn-success'>Submit</button>
       </div>
     </div>
