--- a/pages/index.html
+++ b/pages/index.html
@@ -29,8 +29,7 @@
 
           <div class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id = "search">
-            <button onclick="search()">New button</button>
-            <a class="btn btn-outline-success my-2 my-sm-0" href = "/search" role = "button" onclick="search()">Search</a>    
+            <button class="btn btn-outline-success my-2 my-sm-0" onclick="search()">Search</button>    
           </div>
           
         </div>
