Add filter buttons, update search for new function

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,8 +28,10 @@
           </ul>
 
           <div class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id = "search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search">
             <button class="btn btn-outline-success my-2 my-sm-0" onclick="search()">Search</button>    
+            <button class="btn btn-outline-success my-2 my-sm-0" onclick="viewActiveOnly()">Active Only</button>    
+            <button class="btn btn-outline-success my-2 my-sm-0" onclick="viewAll()">View All</button>    
           </div>
           
         </div>
